<resources>
    <string name="app_name">AgriSolutions</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="about_us">About Us</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name:</string>
    <string name="username">Username:</string>
    <string name="email_address">Email Address:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="occupation">Occupation</string>
    <string name="city">City:</string>
    <string name="province_state">Province/State:</string>
    <string name="country">Country:</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="user_or_expert">User or Expert</string>
    <string name="user">User</string>
    <string name="expert">Expert</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="do_not_have_account_to_create_new_account">Do Not Have Account To Create New Account</string>
    <string name="email_address__">Email Address</string>
    <string name="fulname">Full Name</string>
    <string name="mobile_number_">Mobile Number</string>
    <string name="academic_titile">Academic Titile</string>
    <string name="degree">Degree</string>
    <string name="education">Education</string>
    <string name="university">University</string>
    <string name="city_">City</string>
    <string name="province_state_">Province/State</string>
    <string name="country_">Country</string>
    <string name="register">Register</string>
    <string name="expertise">Expertise</string>
    <string name="contact_number">Contact Number</string>
    <string name="qualification">Qualification</string>
    <string name="address">Address</string>
    <string name="space">,</string>

    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crop_s_name">Crop\'s Name</string>
    <string name="crop_s_price">Crop\'s Price</string>
    <string name="district">District</string>
    <string name="admin_login">Admin Login</string>
    <string name="name">Name</string>


    <string name="open">Drawer Open</string>
    <string name="close">Drawer Close</string>
    <string name="home">Home</string>
    <string name="add_expert">Add Expert</string>
    <string name="upddate_expert">Upddate Expert</string>
    <string name="share">Share</string>
    <string name="add_market_list">Add Market List</string>
    <string name="update_market_list">Update Market list</string>
    <string name="exit">Exit</string>
    <string name="set">Setting</string>
    <string name="date">Date</string>
    <string name="add_item">Add Item</string>
    <string name="ss">|</string>
    <string name="delete">Delete</string>
    <string name="s">:</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="urdu">Urdu</string>
    <string name="english">English</string>
    <string name="ask_community">Ask Community ?</string>
    <string name="username____">Username :</string>
    <string name="title">Title :</string>
    <string name="__name">Name :</string>

    <string name="about_application"> AgriSolutions is online mobile application. AgriSolutions turns your Android phone into mobile crop doctor with which you can accurately detect pests and diseases on crops in within seconds.    </string>
    <string name="what_agrisolutions_offers">What AgriSolutions Offers</string>
    <string name="treatment">Detect pests and diseases on crop and get recommended treatments</string>
    <string name="experts_details____________">Experts Details:</string>
    <string name="information">Information of experts are given. You can easily get information and contact them</string>
    <string name="market_price_list________">Market Price List:</string>
    <string name="market">All price of crops item are given. This activity only for Pakistan country because of all districts are in Pakistan.</string>


</resources>
