<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".AboutUs">

<include
    layout="@layout/toolbar2"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_gravity="top"
            android:textSize="17sp"
            android:text="@string/about_application"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/Green_Apple"
            android:layout_margin="3dp"
            android:layout_height="1dp">

        </View>
        <TextView
            android:textSize="17sp"
            android:text="@string/what_agrisolutions_offers"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="17sp"
            android:text="Heal Your Crop:"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:text="@string/treatment"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="17sp"
            android:text="@string/experts_details____________"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:text="@string/information"
            android:layout_marginBottom="5dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="17sp"
            android:text="@string/market_price_list________"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:text="@string/market"
            android:layout_marginBottom="5dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Green_Apple"
            android:layout_margin="3dp"></View>
        <TextView
            android:textSize="17sp"
            android:text="Designed By:"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:text="AgriSolutions"
            android:layout_marginBottom="5dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="17sp"
            android:text="@string/email_address"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:text="agrisolutions17@gmail.com "
            android:layout_marginBottom="5dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="17sp"
            android:text="Contact No:"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:text="+92302 3364118"
            android:layout_marginBottom="5dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>



    </ScrollView>

</LinearLayout>