<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Green_Apple"
    android:orientation="vertical"
    tools:context=".Login">


    <include
        layout="@layout/toolbar2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="800dp"
        app:cardCornerRadius="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/admin"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:layout_gravity="top|center"
                android:scaleType="fitXY"
                />




            <com.google.android.material.textfield.TextInputLayout
                app:boxStrokeColor="@color/Green_Apple"

                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_address__"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/Green_Apple"
                android:outlineProvider="paddedBounds"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                >

                <RadioButton
                    android:id="@+id/Userid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textSize="17sp"
                    android:layout_marginRight="5dp"
                    />
                <RadioButton
                    android:id="@+id/Expertid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expert"
                    android:textSize="17sp"
                    android:layout_marginLeft="5dp"
                    />

            </RadioGroup>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="@string/login"
                android:background="@drawable/button"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/forgetPass"
                android:onClick="PasswordForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:text="@string/forget_password"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/Green_Apple">
                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/do_not_have_account_to_create_new_account"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>