<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Milk_White"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".User.Fragments.UserProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top|center"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/plants"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userprofileView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="2dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            >

        </de.hdodenhof.circleimageview.CircleImageView>

    </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/full_name"/>
            <TextView
                android:id="@+id/text_userfullname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border"
                android:layout_gravity="start|center"
                android:gravity="start|center"

                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/email_address"/>
                <TextView
                    android:id="@+id/text_useremail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/mobile_number"/>
                <TextView
                    android:id="@+id/text_usermobile"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/occupation"/>
                <TextView
                    android:id="@+id/text_useroccu"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"

                    />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/city"/>
                <TextView
                    android:id="@+id/text_usercity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/province_state"/>
                <TextView
                    android:id="@+id/text_userprovince"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/country"/>
                <TextView
                    android:id="@+id/text_usercountry"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"

                    />


            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/updateFloat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="5dp"
                android:src="@drawable/updatepro"
                app:maxImageSize="30dp"
                app:backgroundTint="@color/White"
                app:layout_behavior="com.codepath.floatingactionbuttontest.ScrollAwareFABBehavior"
                app:layout_anchorGravity="bottom|right|end" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>
</FrameLayout>